src/objects/Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Allow_download_copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For check, Allow downloading questionnaire copy</description>
        <label>Allow Download Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Binding_Object__c</fullName>
        <description>Set information for binding object</description>
        <label>Binding Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Questionnaire information</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For check, questionnaire copy sent or not by mail.</description>
        <label>Send Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Questionnaire</description>
        <label>Questionnaire</label>
        <referenceTo>Questionnaire__c</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Set version information</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>